--- a/.github/workflows/test_python_cplusplus.yml
+++ b/.github/workflows/test_python_cplusplus.yml
@@ -8,20 +8,13 @@ on:
       - master
 
 jobs:
-  build:
-    name: Tests Ubuntu
-
-    # TODO: prepare image with more deps preinstalled
+  ubuntu-cpp-python-tests:
+    name: C++/Python tests Ubuntu
     runs-on: ubuntu-22.04
-
-    env:
-      AMICI_PARALLEL_COMPILE: ""
-      ENABLE_GCOV_COVERAGE: "TRUE"
-      CI_SONARCLOUD: "TRUE"
 
     strategy:
       matrix:
-        python-version: [ 3.9 ]
+        python-version: [ "3.9" ]
 
     steps:
     - name: Set up Python ${{ matrix.python-version }}
@@ -33,28 +26,9 @@ jobs:
     - run: git fetch --prune --unshallow
 
     - run: echo "AMICI_DIR=$(pwd)" >> $GITHUB_ENV
-    - run: echo "BNGPATH=${GITHUB_WORKSPACE}/ThirdParty/BioNetGen-2.7.0" >> $GITHUB_ENV
 
-    - name: Set up Sonar tools
-      uses: ./.github/actions/setup-sonar-tools
-
-    - name: Install apt dependencies
-      uses: ./.github/actions/install-apt-dependencies
-
-    # install amici dependencies
-    - name: apt
-      run: |
-        sudo apt-get update \
-          && sudo apt-get install -y \
-            cmake \
-            python3-venv \
-            lcov
-
-    - name: Build AMICI dependencies
-      run: scripts/buildDependencies.sh
-
-    - name: Build AMICI
-      run: CI_SONARCLOUD=TRUE scripts/buildAmici.sh
+    - name: Set up AMICI C++ libraries
+      uses: ./.github/actions/setup-amici-cpp
 
     - name: C++ tests
       run: scripts/run-cpp-tests.sh
@@ -62,18 +36,19 @@ jobs:
     - name: Install python package
       run: scripts/installAmiciSource.sh
 
-    - name: Python tests
+    - name: Python tests (part 1)
       run: |
         source build/venv/bin/activate \
         && pytest \
           --ignore-glob=*petab* \
           --ignore-glob=*test_splines.py \
+          --ignore-glob=*test_splines_short.py \
+          --ignore-glob=*test_pysb.py \
           --cov=amici \
           --cov-report=xml:"${AMICI_DIR}/build/coverage_py.xml" \
           --cov-append \
           --durations=10 \
           ${AMICI_DIR}/python/tests
-
 
     - name: Python tests splines
       if: ${{ github.base_ref == 'master' || github.event.merge_group.base_ref == 'master'}}
@@ -86,17 +61,6 @@ jobs:
           --durations=10 \
           ${AMICI_DIR}/python/tests/test_splines.py
 
-    - name: Install notebook dependencies
-      run: |
-        source build/venv/bin/activate \
-        && pip install jax[cpu]
-
-    - name: example notebooks
-      run: scripts/runNotebook.sh python/examples/example_*/
-
-    - name: doc notebooks
-      run: scripts/runNotebook.sh documentation/GettingStarted.ipynb
-
     - name: Codecov Python
       uses: codecov/codecov-action@v3.1.0
       with:
@@ -106,7 +70,7 @@ jobs:
         fail_ci_if_error: true
         verbose: true
 
-    - name: lcov
+    - name: Capture coverage info (lcov)
       run: |
         lcov --compat-libtool --no-external \
         -d ${AMICI_DIR}/build/CMakeFiles/amici.dir/src \
@@ -132,6 +96,117 @@ jobs:
         sonar-scanner \
          -Dsonar.cfamily.build-wrapper-output=bw-output \
          -Dsonar.projectVersion="$(git describe --abbrev=4 --dirty=-dirty --always --tags | tr -d '\n')"
+
+  ubuntu-python-tests:
+    name: Python tests Ubuntu
+    runs-on: ubuntu-22.04
+
+    strategy:
+      matrix:
+        python-version: [ "3.9" ]
+
+    steps:
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - uses: actions/checkout@v3
+    - run: git fetch --prune --unshallow
+
+    - run: echo "AMICI_DIR=$(pwd)" >> $GITHUB_ENV
+
+    - name: Set up AMICI C++ libraries
+      uses: ./.github/actions/setup-amici-cpp
+
+    - name: Install python package
+      run: scripts/installAmiciSource.sh
+
+    - name: Python tests
+      run: |
+        source build/venv/bin/activate \
+        && pytest \
+          --cov=amici \
+          --cov-report=xml:"${AMICI_DIR}/build/coverage_py.xml" \
+          --cov-append \
+          --durations=10 \
+          ${AMICI_DIR}/python/tests/test_pysb.py \
+          ${AMICI_DIR}/python/tests/test_splines_short.py
+
+    - name: Codecov Python
+      uses: codecov/codecov-action@v3.1.0
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        file: build/coverage_py.xml
+        flags: python
+        fail_ci_if_error: true
+        verbose: true
+
+    - name: Capture coverage info (lcov)
+      run: |
+        lcov --compat-libtool --no-external \
+        -d ${AMICI_DIR}/build/CMakeFiles/amici.dir/src \
+        -b ${AMICI_DIR} -c -o coverage_cpp.info \
+        && lcov --compat-libtool --no-external \
+        -d ${AMICI_DIR}/python/sdist/build/temp_amici/CMakeFiles/amici.dir/src \
+        -b ${AMICI_DIR}/python/sdist -c -o coverage_py.info \
+        && lcov -a coverage_cpp.info -a coverage_py.info -o coverage.info
+
+    - name: Codecov CPP
+      uses: codecov/codecov-action@v3.1.0
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        file: coverage.info
+        flags: cpp_python
+        fail_ci_if_error: true
+
+    - name: Run sonar-scanner
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      run: |
+        sonar-scanner \
+         -Dsonar.cfamily.build-wrapper-output=bw-output \
+         -Dsonar.projectVersion="$(git describe --abbrev=4 --dirty=-dirty --always --tags | tr -d '\n')"
+
+
+  ubuntu-notebook-tests:
+    name: Notebook tests Ubuntu
+    runs-on: ubuntu-22.04
+
+    strategy:
+      matrix:
+        python-version: [ "3.9" ]
+
+    steps:
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - uses: actions/checkout@v3
+    - run: git fetch --prune --unshallow
+
+    - run: echo "AMICI_DIR=$(pwd)" >> $GITHUB_ENV
+
+    - name: Set up AMICI C++ libraries
+      uses: ./.github/actions/setup-amici-cpp
+
+    - name: Install python package
+      run: scripts/installAmiciSource.sh
+
+    - name: Install notebook dependencies
+      run: |
+        source build/venv/bin/activate \
+        && pip install jax[cpu]
+
+    - name: example notebooks
+      run: scripts/runNotebook.sh python/examples/example_*/
+
+    - name: doc notebooks
+      run: scripts/runNotebook.sh documentation/GettingStarted.ipynb
+
+    # TODO: Include notebooks in coverage report
 
   osx:
     name: Tests OSX
