--- a/.github/workflows/test_python_cplusplus.yml
+++ b/.github/workflows/test_python_cplusplus.yml
@@ -95,7 +95,7 @@ jobs:
         fail_ci_if_error: true
 
     - name: Run sonar-scanner
-      if: github.repository_owner == 'AMICI-dev'
+      if: ${{ env.SONAR_TOKEN != '' }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -170,7 +170,7 @@ jobs:
         fail_ci_if_error: true
 
     - name: Run sonar-scanner
-      if: github.repository_owner == 'AMICI-dev'
+      if: ${{ env.SONAR_TOKEN != '' }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
