--- a/.github/workflows/test_python_ver_matrix.yml
+++ b/.github/workflows/test_python_ver_matrix.yml
@@ -54,6 +54,9 @@ jobs:
     - run: source build/venv/bin/activate && pip3 install git+https://github.com/dateutil/dateutil.git@296d419fe6bf3b22897f8f210735ac9c4e1cb796
       if: matrix.python-version == '3.12'
 
+    # install pysb before sympy to allow for sympy>=1.12 (https://github.com/pysb/pysb/commit/e83937cb8c74afc9b2fa96595b68464946745f33)
+    - run: source build/venv/bin/activate && pip3 install git+https://github.com/pysb/pysb
+
     # until sympy>1.12 is released
     - run: source build/venv/bin/activate && pip3 install git+https://github.com/sympy/sympy.git@master
       if: matrix.python-version == '3.12'
@@ -61,6 +64,5 @@ jobs:
     - name: Python tests
       run: |
         source build/venv/bin/activate \
-          && pip3 install git+https://github.com/pysb/pysb \
           && python3 -m pytest --ignore-glob=*petab* \
             --ignore-glob=*test_splines.py ${AMICI_DIR}/python/tests
