GHA: exclude antimony!=2.14

--- a/python/sdist/setup.cfg
+++ b/python/sdist/setup.cfg
@@ -52,7 +52,9 @@ test =
     pytest-rerunfailures
     coverage
     shyaml
-    antimony
+    antimony>=2.13
+    # see https://github.com/sys-bio/antimony/issues/92
+    antimony!=2.14; platform_system=='Darwin' and platform_machine=='x86_64h'
 vis =
     matplotlib
     seaborn
