--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,15 +16,21 @@ repos:
     args: [--allow-multiple-documents]
   - id: end-of-file-fixer
   - id: trailing-whitespace
-- repo: https://github.com/psf/black
-  rev: 23.7.0
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  # Ruff version.
+  rev: v0.1.11
   hooks:
-    - id: black-jupyter
-      # It is recommended to specify the latest version of Python
-      # supported by your project here, or alternatively use
-      # pre-commit's default_language_version, see
-      # https://pre-commit.com/#top_level-default_language_version
-      language_version: python3.11
-      args: ["--line-length", "79"]
+    # Run the linter.
+    - id: ruff
+      args:
+        - --fix
+        - --config
+        - python/sdist/pyproject.toml
+
+    # Run the formatter.
+    - id: ruff-format
+      args:
+        - --config
+        - python/sdist/pyproject.toml
 
 exclude: '^(ThirdParty|models)/'
