GHA: require antimony!=2.14 (#2256)
Fixes current GHA macOS test failures (see sys-bio/antimony#92).

--- a/python/sdist/setup.cfg
+++ b/python/sdist/setup.cfg
@@ -52,7 +52,10 @@ test =
     pytest-rerunfailures
     coverage
     shyaml
-    antimony
+    antimony>=2.13
+    # see https://github.com/sys-bio/antimony/issues/92
+    #  unsupported x86_64 / x86_64h
+    antimony!=2.14; platform_system=='Darwin' and platform_machine in 'x86_64h'
 vis =
     matplotlib
     seaborn
