--- a/python/sdist/setup.cfg
+++ b/python/sdist/setup.cfg
@@ -34,7 +34,6 @@ install_requires =
     numpy>=1.23.2; python_version=='3.11'
     numpy; python_version>='3.12'
     python-libsbml
-    h5py
     pandas>=2.0.2
     wurlitzer
     toposort
@@ -47,6 +46,7 @@ zip_safe = False
 petab = petab>=0.2.1
 pysb = pysb>=1.13.1
 test =
+    h5py
     pytest
     pytest-cov
     pytest-rerunfailures
@@ -56,9 +56,13 @@ test =
     # see https://github.com/sys-bio/antimony/issues/92
     #  unsupported x86_64 / x86_64h
     antimony!=2.14; platform_system=='Darwin' and platform_machine in 'x86_64h'
+    scipy
 vis =
     matplotlib
     seaborn
+examples =
+    jupyter
+    scipy
 
 [options.package_data]
 amici =
