--- a/.github/workflows/test_python_cplusplus.yml
+++ b/.github/workflows/test_python_cplusplus.yml
@@ -308,5 +308,5 @@ jobs:
       run: |
         scripts/run-python-tests.sh \
           --ignore=test_pregenerated_models.py \
-          --ignore=test_splines_short.py
+          --ignore=test_splines_short.py \
           --ignore=test_misc.py
