--- a/.github/workflows/test_python_cplusplus.yml
+++ b/.github/workflows/test_python_cplusplus.yml
@@ -221,8 +221,6 @@ jobs:
   macos_cpp_py:
     name: Tests MacOS C++/Python
     runs-on: macos-latest
-    env:
-      AMICI_PARALLEL_COMPILE: ""
 
     steps:
     - name: Set up Python
@@ -233,16 +231,11 @@ jobs:
     - uses: actions/checkout@v3
     - run: git fetch --prune --unshallow
 
-    - run: echo "AMICI_DIR=$(pwd)" >> $GITHUB_ENV
-    - run: echo "BNGPATH=${AMICI_DIR}/ThirdParty/BioNetGen-2.7.0" >> $GITHUB_ENV
-    # Ensure CMake is using the python version that we will use for the python tests later on
-    - run: echo "PYTHON_EXECUTABLE=${Python3_ROOT_DIR}/bin/python3" >> $GITHUB_ENV
-    - run: echo "OpenMP_ROOT=$(brew --prefix)/opt/libomp" >> $GITHUB_ENV
-    - run: echo "BOOST_ROOT=$(brew --prefix)/opt/boost" >> $GITHUB_ENV
+    - name: Install dependencies
+      uses: ./.github/actions/install-macos-dependencies
 
-    # install amici dependencies
     - name: homebrew
-      run: brew install hdf5 swig gcc cppcheck libomp boost
+      run: brew install cppcheck
 
     - name: Build AMICI
       run: scripts/buildAll.sh
@@ -270,8 +263,6 @@ jobs:
   macos_python:
     name: Tests MacOS Python
     runs-on: macos-latest
-    env:
-      AMICI_PARALLEL_COMPILE: ""
 
     steps:
     - name: Set up Python
@@ -282,16 +273,8 @@ jobs:
     - uses: actions/checkout@v3
     - run: git fetch --prune --unshallow
 
-    - run: echo "AMICI_DIR=$(pwd)" >> $GITHUB_ENV
-    - run: echo "BNGPATH=${AMICI_DIR}/ThirdParty/BioNetGen-2.7.0" >> $GITHUB_ENV
-    # Ensure CMake is using the python version that we will use for the python tests later on
-    - run: echo "PYTHON_EXECUTABLE=${Python3_ROOT_DIR}/bin/python3" >> $GITHUB_ENV
-    - run: echo "OpenMP_ROOT=$(brew --prefix)/opt/libomp" >> $GITHUB_ENV
-    - run: echo "BOOST_ROOT=$(brew --prefix)/opt/boost" >> $GITHUB_ENV
-
-    # install amici dependencies
-    - name: homebrew
-      run: brew install hdf5 swig gcc cppcheck libomp boost
+    - name: Install dependencies
+      uses: ./.github/actions/install-macos-dependencies
 
     - name: Install python package
       run: |
