--- a/.github/actions/install-macos-dependencies/action.yml
+++ b/.github/actions/install-macos-dependencies/action.yml
@@ -8,8 +8,13 @@ runs:
     - run: echo "AMICI_PARALLEL_COMPILE=" >> $GITHUB_ENV
       shell: bash
 
+    # AMICI repository root
     - run: echo "AMICI_DIR=$(pwd)" >> $GITHUB_ENV
+
+    # BioNetGen path
     - run: echo "BNGPATH=${AMICI_DIR}/ThirdParty/BioNetGen-2.7.0" >> $GITHUB_ENV
+
+    # CMake hints
     # Ensure CMake is using the python version that we will use for the python tests later on
     - run: echo "PYTHON_EXECUTABLE=${Python3_ROOT_DIR}/bin/python3" >> $GITHUB_ENV
     - run: echo "OpenMP_ROOT=$(brew --prefix)/opt/libomp" >> $GITHUB_ENV
@@ -17,4 +22,4 @@ runs:
 
     # install amici dependencies
     - name: homebrew
-      run: brew install hdf5 swig gcc cppcheck libomp boost
+      run: brew install hdf5 swig gcc libomp boost
