GHA: Split macOS C++ / Python test jobs (#2260)
Currently, macOS jobs run for >1h, this can be rather annoying. 
Splitting current tests into two separate jobs. Now we have 33' + 23' instead of 1h20'.

Also:
* cleanup some bash scripts
* manage dependencies via pyproject.toml
* move h5py dependency to extras
* parallelize model compilation on macos

--- a/.github/workflows/test_python_cplusplus.yml
+++ b/.github/workflows/test_python_cplusplus.yml
@@ -218,8 +218,8 @@ jobs:
 
     # TODO: Include notebooks in coverage report
 
-  osx:
-    name: Tests OSX
+  macos_cpp_py:
+    name: Tests MacOS C++/Python
     runs-on: macos-latest
 
     steps:
@@ -231,16 +231,11 @@ jobs:
     - uses: actions/checkout@v3
     - run: git fetch --prune --unshallow
 
-    - run: echo "AMICI_DIR=$(pwd)" >> $GITHUB_ENV
-    - run: echo "BNGPATH=${AMICI_DIR}/ThirdParty/BioNetGen-2.7.0" >> $GITHUB_ENV
-    # Ensure CMake is using the python version that we will use for the python tests later on
-    - run: echo "PYTHON_EXECUTABLE=${Python3_ROOT_DIR}/bin/python3" >> $GITHUB_ENV
-    - run: echo "OpenMP_ROOT=$(brew --prefix)/opt/libomp" >> $GITHUB_ENV
-    - run: echo "BOOST_ROOT=$(brew --prefix)/opt/boost" >> $GITHUB_ENV
+    - name: Install dependencies
+      uses: ./.github/actions/install-macos-dependencies
 
-    # install amici dependencies
     - name: homebrew
-      run: brew install hdf5 swig gcc cppcheck libomp boost
+      run: brew install cppcheck
 
     - name: Build AMICI
       run: scripts/buildAll.sh
@@ -254,8 +249,47 @@ jobs:
     - name: cppcheck
       run: scripts/run-cppcheck.sh
 
-    - name: Python tests
-      run: scripts/run-python-tests.sh
-
     - name: C++ tests
       run: scripts/run-cpp-tests.sh
+
+    - name: Python tests
+      run: |
+        scripts/run-python-tests.sh \
+          test_pregenerated_models.py \
+          test_splines_short.py \
+          test_misc.py
+
+
+  macos_python:
+    name: Tests MacOS Python
+    runs-on: macos-latest
+
+    steps:
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.9
+
+    - uses: actions/checkout@v3
+    - run: git fetch --prune --unshallow
+
+    - name: Install dependencies
+      uses: ./.github/actions/install-macos-dependencies
+
+    - name: Install python package
+      run: |
+        pip show numpy > /dev/null || python3 -m pip install numpy
+        scripts/installAmiciSource.sh
+
+    - name: Check OpenMP support
+      run: source build/venv/bin/activate && python -c "import amici; import sys; sys.exit(not amici.compiledWithOpenMP())"
+
+    - name: Get BioNetGen
+      run: scripts/buildBNGL.sh
+
+    - name: Python tests
+      run: |
+        scripts/run-python-tests.sh \
+          --ignore=test_pregenerated_models.py \
+          --ignore=test_splines_short.py \
+          --ignore=test_misc.py
