--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,4 +27,11 @@ repos:
         - --config
         - python/sdist/pyproject.toml
 
+-   repo: https://github.com/asottile/pyupgrade
+    rev: v3.15.0
+    hooks:
+    -   id: pyupgrade
+        args: ["--py39-plus"]
+        additional_dependencies: [pyupgrade==3.15.0]
+
 exclude: '^(ThirdParty|models)/'
