--- a/.github/workflows/test_petab_test_suite.yml
+++ b/.github/workflows/test_petab_test_suite.yml
@@ -72,7 +72,7 @@ jobs:
         run: |
           source ./build/venv/bin/activate \
             && pytest --cov-report=xml:coverage.xml \
-              --cov=./ python/tests/test_*petab*.py
+              --cov=./ python/tests/test_*petab*.py python/tests/petab/
 
       # run test models
       - name: Run PEtab test suite
