--- a/.github/workflows/test_matlab.yml
+++ b/.github/workflows/test_matlab.yml
@@ -1,5 +1,12 @@
 name: Matlab
-on: [push, merge_group, workflow_dispatch]
+on:
+  push:
+  merge_group:
+  workflow_dispatch:
+  pull_request:
+    branches:
+      - master
+
 
 jobs:
   matlab:
