--- a/python/sdist/setup.cfg
+++ b/python/sdist/setup.cfg
@@ -35,6 +35,7 @@ install_requires =
     numpy; python_version>='3.12'
     python-libsbml
     pandas>=2.0.2
+    pyarrow
     wurlitzer
     toposort
     setuptools>=48
